# ChangeLog for gnome-base/gvfs
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-base/gvfs/ChangeLog,v 1.2 2008/03/24 00:35:36 compnerd Exp $

  24 Mar 2008; Saleem Abdulrasool <compnerd@gentoo.org> gvfs-0.2.1.ebuild:
  add hal dep for cdda

*gvfs-0.2.1 (23 Mar 2008)

  23 Mar 2008; Mart Raudsepp <leio@gentoo.org> +metadata.xml,
  +gvfs-0.2.1.ebuild:
  Initial import of GVFS - the new Virtual Filesystem layer used by GNOME-2.22
  and any other glib-2.16 GIO API using application for seamless remote
  filesystem access and more
