@@ -1,4 +1,16 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST gvfs-0.2.1.tar.bz2 817139 RMD160 af7006ce4d91134d4f81edac70f7883c8a708fba SHA1 bb48e90182ad22fe6be60fc1193e668a8d2ee88f SHA256 bb51a59ab302f156a4ea2ec359be015229432728a4091576267ad4ed6b7c847b
+DIST gvfs-0.2.2.tar.bz2 810873 RMD160 a748a862bb3808cacbc18dfe7315d7713241c0b5 SHA1 963938c163bada7d3e2096a81e0fbd406e71fbad SHA256 1787d32f9823dafbc7ef1722d534269f00419a84508b24569baa05d7bbbe812f
 EBUILD gvfs-0.2.1.ebuild 1425 RMD160 0072baff1c150bbf15b70e3b455e84c35e7a800b SHA1 fa8cf7d27c83775472641a99f69b1c374b293755 SHA256 cdf99e3f6e5923a6904ad4fe4a811bc7b95d15515aae8d5310b45bc8b35cbddc
-MISC ChangeLog 596 RMD160 ee29d16516a7a5459b9454b1e5910583a16ca4d0 SHA1 231b8fd7b1c09a00dbbb3e45ac2d17d50b570867 SHA256 e9865f8cc0a504a0a9704bf3265e7de2eabf9c5a8bf88611fc0a2dd0ca1cdc41
+EBUILD gvfs-0.2.2.ebuild 1410 RMD160 fde9c5810363590ff1ddd95e0a0379d93775e573 SHA1 8363d98566f65c97500fdefb8274f135e5956c72 SHA256 89b00fffac40a71cd483e74775f4a4f708686c47ef6b7fa156d603ada253a2c7
+MISC ChangeLog 829 RMD160 24a54fa580e2400fa4501ef82970771809624d96 SHA1 785caa23d2c68571f80b24179a00b37f159f4f27 SHA256 c589633e68ec28f3305990f5ff2095f933fe611929f784b06d811f393aeb4c78
 MISC metadata.xml 532 RMD160 68d42d72c4e5a799b95ad4d9490adaed357e8581 SHA1 2f8c8204354af53feb5290b43515045f5bba5844 SHA256 da612312217f0248f59bda537a943e5c085829ca929507371d0ece3a7d7dd1ab
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.9 (GNU/Linux)
+
+iEYEARECAAYFAkfxVoAACgkQ1fmVwcYIWAZLTgCfXC3JxNTzUdzv2YbukXibo46/
+mMQAnRyO3IIAxPfru58G4/G9Dmb5FCih
+=nRg9
+-----END PGP SIGNATURE-----
