@@ -1,6 +1,12 @@
 # ChangeLog for gnome-base/gvfs
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/gvfs/ChangeLog,v 1.2 2008/03/24 00:35:36 compnerd Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/gvfs/ChangeLog,v 1.3 2008/03/31 21:24:07 eva Exp $
+
+*gvfs-0.2.2 (31 Mar 2008)
+
+  31 Mar 2008; Gilles Dartiguelongue <eva@gentoo.org> +gvfs-0.2.2.ebuild:
+  bump to 0.2.2, fix crashes and leaks and silent overwrites (sftp). Fix bug
+  #215322 by raising media-libs/gphoto2 dependency to 2.4.
 
   24 Mar 2008; Saleem Abdulrasool <compnerd@gentoo.org> gvfs-0.2.1.ebuild:
   add hal dep for cdda
